fixed z-index of bottom button

--- a/css/stylish-portfolio.css
+++ b/css/stylish-portfolio.css
@@ -371,4 +371,5 @@ footer {
   position: fixed;
   bottom: 5px;
   right: 5px;
+  z-index: 1020;
 }
